--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
 
     <application
         android:allowBackup="true"
@@ -18,6 +19,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IIMusica"
         tools:targetApi="31">
+        <receiver android:name=".utils.NotificationBroadcastReceiver" android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -28,6 +30,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
+
 
 </manifest>
