Creating media service, intents for notification. Architectural restructuring

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:theme="@style/Theme.IIMusica"
         tools:targetApi="31">
         <service
-            android:name=".utils.notifications.PlaybackService"
+            android:name=".player.PlaybackService"
             android:exported="false"
             android:foregroundServiceType="mediaPlayback" />
 
